Updated the index top, will add more later if necessary

--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,10 @@
     font-family: 'Fira Sans', sans-serif;
 }
 
+#txt_top {
+    font-family: 'Roboto Slab', sans-serif;
+}
+
 #index_sommaire {
     font-family: 'Comfortaa', sans-serif;
 }
