Updated many files; reformated code

--- a/style/style.css
+++ b/style/style.css
@@ -55,6 +55,14 @@
     font-family: 'Roboto Slab', sans-serif;
 }
 
+#pérénité_intro {
+    font-family: 'Fira Sans', sans-serif;
+}
+
+h1 {
+    font-size: 34px;
+}
+
 h2 {
     font-size: 32px;
 }
